--- a/solardoc/frontend/src/assets/main.scss
+++ b/solardoc/frontend/src/assets/main.scss
@@ -17,8 +17,8 @@
 
 // Make app take up whole screen
 body #app {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
